refactor to add main.py from which to run commands, added preprocess script and a tokenizer (needs work during parsing some nodes get null token)

--- a/AST_parser.ipynb
+++ b/AST_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,90 @@
     "import re\n",
     "import subprocess\n",
     "import pexpect\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import subprocess\n",
+    "import pexpect\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "string argument without an encoding",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-84-c37a25b259d8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'g++'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-x'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'c++'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-Wall'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-o'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'myprog'\u001b[0m \u001b[0;34m'/dev/stdin'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommunicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprogram\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: string argument without an encoding"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "program = \"\"\"#define ONLINE_JUDGE \n",
+    "// program to add two numbers using a function\n",
+    "\n",
+    "#include <iostream>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "// declaring a function\n",
+    "int add(int a, int b) {\n",
+    "    return (a + b);\n",
+    "}\"\"\"\n",
+    "\n",
+    "\n",
+    "p = subprocess.Popen(['g++', '-x', 'c++', '-Wall', '-o', 'myprog' '/dev/stdin'], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "p.communicate(bytes(program))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<pexpect.pty_spawn.spawn at 0x7fc1ed4607f0>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 101
+    }
+   ],
+   "source": [
+    "analyzer = pexpect.spawn('g++ -x c++ -Wall -E /dev/stdin', encoding='utf-8')\n",
+    "analyzer.sendline(program)\n",
+    "p.expect(pexpect.EOF)\n",
+    "analyzer.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "b'#define ONLINE_JUDGE \\n// program to add two numbers using a function\\n\\n#include <iostream>\\n\\nusing namespace std;\\n\\n// declaring a function\\nint add(int a, int b) {\\n    return (a + b);\\n} | g++ -x c++ -Wall -E /dev/stdin\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
+   "source": [
+    "subprocess.check_output(['echo', program, '|', 'g++', '-x', 'c++', '-Wall', '-E', '/dev/stdin'])"
    ]
   },
   {
@@ -33,6 +107,136 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_solution(row):\n",
+    "    solution = row['solution']\n",
+    "    includes_usings = []\n",
+    "    include_regex = re.compile(r'^#*.include')\n",
+    "    using_regex = re.compile(r'^using')\n",
+    "    lines = re.split(';|\\n', solution)\n",
+    "    includes_usings += [element + ';' for element in list(filter(using_regex.search, lines))]\n",
+    "    includes_usings += list(filter(include_regex.search, lines))\n",
+    "\n",
+    "\n",
+    "    if not '#define ONLINE_JUDGE' in solution:\n",
+    "        solution = '#define ONLINE_JUDGE \\n' + solution\n",
+    "\n",
+    "    return solution, includes_usings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 305433/305433 [00:42<00:00, 7180.43it/s] \n",
+      "100%|██████████| 429990/429990 [01:02<00:00, 6857.04it/s] \n",
+      "100%|██████████| 407968/407968 [00:56<00:00, 7184.93it/s] \n",
+      "100%|██████████| 362021/362021 [00:51<00:00, 7039.47it/s] \n",
+      "100%|██████████| 437826/437826 [01:01<00:00, 7105.43it/s] \n",
+      "100%|██████████| 375984/375984 [00:56<00:00, 6691.47it/s] \n",
+      "/home/sander/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3145: DtypeWarning: Columns (4) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "100%|██████████| 303187/303187 [00:44<00:00, 6800.08it/s] \n",
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "Columns must be same length as key",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-9c34abecb631>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mchunk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchunk\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'solution'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mtqdm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpandas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mchunk\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'solution'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'imports'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprogress_apply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreprocess_solution\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'expand'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mchunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3158\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_setitem_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3159\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3160\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_setitem_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3161\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3162\u001b[0m             \u001b[0;31m# set column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_setitem_array\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3187\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3188\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3189\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Columns must be same length as key\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3190\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mk1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk2\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3191\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Columns must be same length as key"
+     ]
+    }
+   ],
+   "source": [
+    "input_file = '../codeforces-scraper/data/contests_solutions/solutions_600.csv'\n",
+    "output_file = '../data/cpp_preprocessed/solutions_600.csv'\n",
+    "\n",
+    "header = True\n",
+    "df = pd.read_csv(input_file, chunksize=5e5)\n",
+    "\n",
+    "for chunk in df:\n",
+    "    chunk = chunk[chunk['programmingLangauge'].str.contains('C\\+\\+')]\n",
+    "    chunk = chunk[~chunk['solution'].isnull()]\n",
+    "    tqdm.pandas()\n",
+    "    chunk[['solution','imports']] = chunk.progress_apply(preprocess_solution, axis=1, result_type='expand')\n",
+    "    chunk.to_csv(output_file, header=header, index=False, mode='a')\n",
+    "    header = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('../data/cpp_preprocessed/solutions_600.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "solution      #define ONLINE_JUDGE \\n///Fix the cause, not t...\nsolutionId                                            107004724\nName: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for program in data[['solution', 'solutionId']].iterrows():\n",
+    "    print(program[1])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop(columns='Unnamed: 0', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('../data/cpp_preprocessed/solutions_600.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[:100].to_csv('../data/cpp_preprocessed/test.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -58,31 +262,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import clang.cindex"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clang_lib_file='/usr/lib/x86_64-linux-gnu/libclang-6.0.so.1'\n",
+    "clang.cindex.Config.set_library_file(clang_lib_file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "index = clang.cindex.Index.create()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<clang.cindex.TranslationUnit at 0x7fd4e79a0370>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "index.parse('tmp.cpp', unsaved_files=[('tmp.cpp', program)], args=['-x', 'c++', '-std=c++17'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "program = data.iloc[0]['solution']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'#define ONLINE_JUDGE ///Fix the cause, not the symptom.#include<bits/stdc++.h>using namespace std;#define ll           long long#define ull          unsigned long long#define db           double#define sf           scanf#define pf           printf#define pb           push_back#define pi           acos(-1)#define MOD          1000000007#define pii          pair<ll,ll>#define time_save    ios_base::sync_with_stdio(false); cin.tie(NULL);#define D(x)         cerr << __LINE__ << \": \" << #x << \" = \" << (x) << \\'\\\\n\\'#define DD(x,y)      cerr << __LINE__ << \": \" << #x << \" = \" << x << \"   \" << #y << \" = \" << y << \\'\\\\n\\'#define DDD(x,y,z)   cerr << __LINE__ << \": \" << #x << \" = \" << x << \"   \" << #y << \" = \" << y << \"   \" << #z << \" = \" << z << \\'\\\\n\\'#define DBG          cerr << __LINE__ << \": Hi\" << \\'\\\\n\\'/*----------------------Graph Moves----------------*///const ll dx[]={+1,-1,+0,+0};//const ll dy[]={+0,+0,+1,-1};//const ll dx[]={+0,+0,+1,-1,-1,+1,-1,+1};   // Kings Move//const ll dy[]={-1,+1,+0,+0,+1,+1,-1,-1};  // Kings Move//const ll dx[]={-2, -2, -1, -1,  1,  1,  2,  2};  // Knights Move//const ll dy[]={-1,  1, -2,  2, -2,  2, -1,  1}; // Knights Move/*------------------------------------------------*//*-----------------------Bitmask------------------*///int Set(int N,int pos){return N=N  (1<<pos);}//int reset(int N,int pos){return N= N & ~(1<<pos);}//bool check(int N,int pos){return (bool)(N & (1<<pos));}/*------------------------------------------------*/ll vis[505][5005],num[505][5005],s,d;struct nod{    ll d,s;    string n;};void bfs(){    queue<nod>q;    q.push({0,0,\"\"});    //DD(x.first,x.second);    vis[0][0]=1;    while(!q.empty()){        nod u=q.front();        q.pop();       // DD(u.first,u.second);        ll mod=u.d;        ll sum=u.s;        string str=u.n;        if(sum<=s){            if(mod==0&&sum==s){                cout<<str<<endl;                return;            }            for(ll i=0;i<=9;i++){                ll mod2=(mod*10+i)%d;                ll sum2=sum+i;                if(!vis[mod2][sum2]){                    vis[mod2][sum2]=1;                    q.push({mod2,sum2,str+(char)(i+\\'0\\')});                }            }        }    }    cout<<-1<<endl;    return;}int main(){    #ifndef ONLINE_JUDGE       freopen(\"in.txt\",\"r\",stdin);    ///   freopen(\"out.txt\",\"w\",stdout);    #endif    //time_save;    cin>>d>>s;    bfs();    return 0;}'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "source": [
+    "program.replace('\\n', '')"
+   ]
   },
   {
    "cell_type": "code",
